# MLHL-02-EDA-project

./: .dockerignore  .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
app/: config.py  loggers.py  notify.py  parser.py  runner.py  scraper.py
app/controller/: controller.ipynb
app/db/: config.py  helpers.py  models.py  sqlite.db
app/db/migrations/: alembic.ini  env.py
app/db/migrations/versions/: 375710df0a7b_initial.py  b0e978d136a0_.py
app/notebook/: controller.ipynb  parser.ipynb  scraper.ipynb
notebook/: analysis.ipynb
scripts/: check_code.sh  poetry_install.sh  run_jupyter.sh
