[tool.poetry]
name = "EDA project"
version = "0.1.0"
description = ""
authors = ["Sergey Pavlov <self@sergeypavlov.dev>", "Pavel Golubev <pavelgolubev345@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
selenium = "*"
beautifulsoup4 = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
jupyter = "*"
jupyterthemes = "*"
mypy = "*"
flake8 = "*"

[tool.poetry-exec-plugin.commands]
jupyter = "jupyter notebook --allow-root --no-browser --ip 0.0.0.0 --NotebookApp.token=''"