[tool.poetry]
name = "EDA project"
version = "0.1.0"
description = ""
authors = ["Sergey Pavlov <self@sergeypavlov.dev>", "Pavel Golubev <pavelgolubev345@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
selenium = "4.1.0"
beautifulsoup4 = "4.10.0"
pandas = "1.3.4"
sqlalchemy = "1.4.27"
alembic = "1.7.5"
python-telegram-bot = "13.8.1"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
jupyterthemes = "0.20.0"
seaborn = "0.11.2"
mypy = "0.910"
flake8 = "4.0.1"

[tool.poetry-exec-plugin.commands]
jupyter = "jupyter notebook --allow-root --no-browser --ip 0.0.0.0 --NotebookApp.token=''"
revision = "alembic -c ${PWD}/app/db/migrations/alembic.ini revision --autogenerate -m"
migrate = "alembic -c ${PWD}/app/db/migrations/alembic.ini upgrade head"