[tool.poetry]
name = "EDA project"
version = "0.1.0"
description = ""
authors = [
    "Sergey Pavlov <self@sergeypavlov.dev>",
    "Pavel Golubev <pavelgolubev345@gmail.com>"
]

[tool.poetry.dependencies]
python = "~3.9"
selenium = "4.1.0"
beautifulsoup4 = "4.10.0"
pandas = "1.4.0"
sqlalchemy = "1.4.31"
alembic = "1.7.6"
python-telegram-bot = "13.11"

[tool.poetry.dev-dependencies]
mypy = "0.931"
flake8 = "4.0.1"
jupyter = "1.0.0"
jupyterthemes = "0.20.0"
seaborn = "0.11.2"
scikit-learn = "1.0.2"

[tool.poetry-exec-plugin.commands]
jupyter = "jupyter notebook --allow-root --no-browser --ip 0.0.0.0 --NotebookApp.token=''"
revision = "alembic -c ${PWD}/app/db/migrations/alembic.ini revision --autogenerate -m"
migrate = "alembic -c ${PWD}/app/db/migrations/alembic.ini upgrade head"
type_check = "mypy app --strict"
lint = "flake8 app --count --statistics --show-source --exclude **/migrations"

[tool.mypy]
exclude = "migrations"
ignore_missing_imports = true
show_error_codes = true